cmake_minimum_required(VERSION 3.30.5)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        src/week2/lab1/propblem5.cpp
        "src/week2/lab1/problem 6.cpp"
        "src/week2/lab1/problem 7.cpp"
        "src/week2/lab1/problem 8.cpp"
        src/week2/lab2/problem1.cpp
        src/week2/lab2/problem2.cpp
        src/week2/lab2/problem3.cpp
        src/week2/lab2/problem4.cpp
        src/week2/lab2/problem5.cpp
        src/week2/lab4/problem1.cpp
        src/week2/lab4/problem2.cpp
        src/week2/lab4/problem3.cpp
        src/week2/lab4/problem4.cpp
        src/week2/lab4/problem5.cpp
        src/week2/lab4/PROBLEM6.cpp
        src/week2/lab4/problem7.cpp
        "src/week3/lab 6/problem1.cpp"
        "src/week3/lab 6/problem2.cpp"
        "src/week3/lab 6/problem3.cpp"
        "src/week3/lab 6/problem4.cpp"
        "src/week3/lab 6/problem5.cpp"
        "src/week3/lab 6/problem 6.cpp"
        "src/week3/lab 6/problem7.cpp"
        "src/week3/lab 6/problem8.cpp")
